--- a/milestone4-resume-editable/index.html
+++ b/milestone4-resume-editable/index.html
@@ -105,16 +105,16 @@
   
         <div class="container">
           <p id="nameT1">Nazia Imran</p>
-          <p id="contactT">+923170234061</p>
+          <p id="contactT">+923171234567</p>
           <p id="addressT">Gulistan-e-Johar block 19, karachi</p>
 
           <hr/>
 
           <p>
-            <a id="linkT" href="#1">www.linkedin.com/in/nazia-imran-588090300</a>
+            <a id="linkT" href="#1">www.linkedin.com</a>
           </p>
           <p>
-            <a  id="fbT" href="#1">https://www.facebook.com/profile.php?id=100001297523230</a>
+            <a  id="fbT" href="#1">https://www.facebook.com</a>
           </p>
         </div>
       </div>
