--- a/milestone5-unique-link/index.html
+++ b/milestone5-unique-link/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- here go html code -->
+  <!-------------------------------- here go html code for generate resume form ------------------------------>
 
   <div class="container" id="cv-form">
     <h1 class="text-center my-2">Resume Generator</h1>
@@ -20,10 +20,10 @@
 
     <div class="row">
       <div class="col-md-6">
-        <!-- first col -->
+        <!----------------------------- first col ------------------------------------------------------>
          <h3>Personal Information</h3>
 
-         <div class="form-group">
+        <div class="form-group">
           <label for="nameField">Your Name</label>
           <input type="text" id="nameField" placeholder="Enter Here" class="form-control"/>
         </div>
@@ -34,7 +34,7 @@
         </div>
 
         <div class="form-group mt-2">
-          <label for="contactField">Your Address</label>
+          <label for="addressField">Your Address</label>
           <textarea type="text" id="addressField" placeholder="Enter Here" class="form-control" rows="5"></textarea>
         </div>
 
@@ -56,12 +56,12 @@
         </div>
 
         <div class="form-group mt-2">
-          <label for="instaField">Instagram</label>
-          <input type="text" id="instaField" placeholder="Enter Here" class="form-control" />
+          <label for="githubField">Github</label>
+          <input type="text" id="githubField" placeholder="Enter Here" class="form-control" />
         </div>
       </div>
       <div class="col-md-6">
-        <!-- second col -->
+        <!----------------------------------------- second col --------------------------------------------->
         <h3>Professional Information</h3>
 
         <div class="form-group mt-2">
@@ -73,7 +73,7 @@
           <label for="">Work Experience</label>
           <textarea placeholder="Enter Here" class="form-control weField" rows="3"></textarea>
 
-          <!-- new text area -->
+          <!--------------------- adding new text area in work experience on Add button -------------------------->
 
           <div class="container text-center mt-2" id="weAddButton">
             <button onclick="addNewWEField()" class="btn btn-primary btn-sm"> Add </button>
@@ -84,22 +84,27 @@
           <label for="">Academic Qualification</label>
           <textarea placeholder="Enter Here" class="form-control eqField" rows="3"></textarea>
 
+           <!--------------------- adding new text area in Academic Qualification on Add button ------------------->
+
           <div class="container text-center mt-2" id="aqAddButton">
             <button onclick="addNewAQField()" class="btn btn-primary btn-sm"> Add </button>
           </div>
         </div>
       </div>      
     </div>
+
+     <!------------------------------------------ Generate resume  button ---------------------------------->
+
     <div class="container text-center mt-3">
       <button onclick="generateResume()" id="generateBtn" class="btn btn-primary btn-lg">Generate Resume</button>
     </div> 
   </div>
 
-  <!-- CV template -->
+  <!-----------------------------------------------here code for CV template ----------------------------------->
    <div class="conainer" id="cv-template">
     <div class="row">
-      <div class="col-md-4 text-center py-5 background">
-        <!-- first col -->
+      <div class="col-md-4 text-center py-5 background" id="personalInfo">
+        <!-----------------------------------------------first col ---------------------------------------------->
 
         <img src="profile dummy.jpg" alt="" class="img-fluid myimg" id="imgTemplate"/>
   
@@ -111,19 +116,23 @@
           <hr/>
 
           <p>
-            <a id="linkT" href="#1">www.linkedin.com/in/nazia-imran-588090300</a>
+            <a id="linkT" href="#1">www.linkedin.com</a>
           </p>
           <p>
-            <a  id="fbT" href="#1">https://www.facebook.com/profile.php?id=100001297523230</a>
+            <a  id="fbT" href="#1">https://www.facebook.com</a>
+          </p>
+          <p>
+            <a  id="githubT" href="#1">https://www.github.com/</a>
           </p>
         </div>
       </div>
-      <div class="col-md-8">
-        <!-- second col -->
+
+      <!--------------------------------------- second col ------------------------------------------------>
+      <div class="col-md-8">     
 
         <h1 id="nameT2" class="text-center">Nazia Imran</h1>
   
-            <!-- objective card -->
+            <!----------------------------------- objective card --------------------------------------------->
   
             <div class="card mt-4">
               <div class="card-header background">
@@ -141,7 +150,7 @@
               </div>
             </div>
   
-            <!-- work Experience -->
+            <!-- ---------------------------------work Experience ---------------------------------------->
   
             <div class="card mt-4">
               <div class="card-header background">
@@ -156,7 +165,7 @@
               </div>
             </div>
   
-              <!-- Academic Qualification -->
+              <!------------------------------------- Academic Qualification ------------------------------>
   
               <div class="card mt-4">
                   <div class="card-header background">
